<?xml version="1.0" encoding="utf-8"?>
<!-- 界面外围的的整体布局风格 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:padding="10dp" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/register_title"
        android:textColor="#b88756"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/table_style"
        android:orientation="vertical"
        android:padding="10dp" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:collapseColumns="2"
            android:stretchColumns="1" >

            <!-- 邮箱 -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblRegisterEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_email"
                    android:textColor="#b88756"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txtRegisterEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/txt_style"
                    android:hint="@string/register_email_hint"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="8dp"
                    android:textSize="12sp" />
            </TableRow>
            
            <!-- 用户名 -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblRegisterAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_account"
                    android:textColor="#b88756"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txtRegisterAccount"
                    android:layout_width="fill_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/txt_style"
                    android:hint="@string/register_account_hint"
                    android:inputType="text"
                    android:paddingLeft="8dp"
                    android:textSize="12sp" />
            </TableRow>

            <!-- 密码 -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblRegisterPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_pwd"
                    android:textColor="#b88756"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txtRegisterPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/txt_style"
                    android:hint="@string/register_pwd_hint"
                    android:inputType="textPassword"
                    android:paddingLeft="8dp"
                    android:textSize="12sp" />
            </TableRow>

            <!-- 确认密码 -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblRePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_repwd"
                    android:textColor="#b88756"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/txtRePassword"
                    android:layout_width="fill_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/txt_style"
                    android:hint="@string/register_repwd_hint"
                    android:inputType="textPassword"
                    android:paddingLeft="8dp"
                    android:textSize="12sp" />
            </TableRow>
        </TableLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <!-- 添加一个立即注册按钮 -->

            <Button
                android:id="@+id/btnRegisterNow"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/btn_reg_style"
                android:text="@string/register_register"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
            </LinearLayout>
        
        
    </LinearLayout>

</RelativeLayout>