<?xml version="1.0" encoding="utf-8"?>
<!-- 界面外围的的整体布局风格 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:padding="10dp" >

    <!-- 添加一个TextView文本组件标签 -->

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/login_title"
        android:textColor="#b88756"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/table_style"
        android:orientation="vertical"
        android:padding="10dp" >

        <!-- 上半部分：TableLayout完成我们的标签和编辑文本框 -->

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:collapseColumns="2"
            android:stretchColumns="1" >

            <!-- 第一行组件标签 -->

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <!-- 添加文本标签 -->

                <TextView
                    android:id="@+id/lblAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_account"
                    android:textColor="#b88756"
                    android:textSize="15sp" />

                <!-- 添加一个编辑文本框 -->

                <EditText
                    android:id="@+id/txtAccount"
                    android:layout_width="fill_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/txt_style"
                    android:hint="@string/login_account_hint"
                    android:inputType="text"
                    android:paddingLeft="8dp"
                    android:textSize="12sp" />
            </TableRow>

            <!-- 第二行组件标签 -->

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp" >

                <!-- 添加文本标签 -->

                <TextView
                    android:id="@+id/lblPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_pwd"
                    android:textColor="#b88756"
                    android:textSize="15sp" />

                <!-- 添加一个编辑文本框 -->

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/txt_style"
                    android:hint="@string/login_pwd_hint"
                    android:inputType="textPassword"
                    android:paddingLeft="8dp"
                    android:textSize="12sp" />
            </TableRow>
        </TableLayout>

        <!-- 下半部分：LinearLayout实现按钮组件的添加 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <!-- 添加一个立即注册按钮 -->

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/btn_reg_style"
                android:text="@string/login_register"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <!-- 添加一个马上登录按钮 -->

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_login_bg"
                android:text="@string/login_login"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>